--- a/scss/abstracs/_variables.scss
+++ b/scss/abstracs/_variables.scss
@@ -12,3 +12,9 @@ $gray5: #E0E0E0;
 $gray4: #BDBDBD;
 $gray6: #F2F2F2;
 $btn-color: #F2994A;
+
+// Screens
+$desktop: 1240px;
+$desktop2: 1050px;
+$tablet: 800px;
+$mobile: 400px;
