--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -7,9 +7,8 @@ input[type="button"] {
     cursor: pointer;
     font-size: 1rem;
     font-weight: 600;
-    float: right;
+    float: center;
     transition: 0.3s ease background-color;
-    text-align: end;
     margin-top: 2rem;
     &:hover {
         background-color: #d68d4c;
